[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://Audios/Track 1.mp3" type="AudioStream" id=2]
[ext_resource path="res://Sprites/Interface/Menu/full volume.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Interface/Menu/mute volume.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Interface/Menu/menu2.png" type="Texture" id=5]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="Sprite" parent="."]
position = Vector2( 959.375, 539.75 )
scale = Vector2( 0.749707, 0.844141 )
texture = ExtResource( 5 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0
autoplay = true

[node name="Play" type="Button" parent="."]
margin_left = 866.0
margin_top = 349.0
margin_right = 1044.0
margin_bottom = 411.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 852.0
margin_top = 449.0
margin_right = 1044.0
margin_bottom = 511.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mute" type="Button" parent="."]
margin_left = 30.0
margin_top = 14.0
margin_right = 103.0
margin_bottom = 90.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundMuted" type="Sprite" parent="."]
visible = false
position = Vector2( 65.5, 53.5 )
scale = Vector2( 3.3, 3.12121 )
texture = ExtResource( 4 )

[node name="SoundUnmuted" type="Sprite" parent="."]
position = Vector2( 61.5, 52 )
scale = Vector2( 3.27586, 3.17241 )
texture = ExtResource( 3 )

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Mute" to="." method="_on_Mute_pressed"]
